  transition probabilities and simulation ("pmatrix.fs",
  "pmatrix.simfs", "sim.fmsm").  An "msfit.flexsurvreg" method also
  gives cumulative incidences in the format of the "mstate" package.

* Interval censoring supported in the Surv() response.

* Relative survival models, using the "bhazard" argument to
  flexsurvreg to specify the expected mortality rate.

Custom distributions:

* Custom distributions can be defined through the hazard function.
  This can be optionally supplemented with the cumulative hazard
  function, otherwise this is obtained by numerical integration.

* In custom distributions specified by the density, the cumulative
  distribution can now be omitted, and it will be calculated by
  numerical integration.

* New arguments "dfns" and "aux" to flexsurvreg, which can be used to
  supply custom distribution functions and arguments to pass to them.

* Document that density functions for custom distributions need "log"
  argument.

* Documented how to supply derivatives of custom distributions for use
  in optimisation.

Output functions:

* New "newdata" argument to summary.flexsurvreg and plot.flexsurvreg
  for an easier way of supplying covariate values.

* User-defined summary functions can be used in summary.flexsurvreg,
  as an alternative to survival, hazard or cumulative hazard.

* New function "normboot.flexsurvreg" to simulate parameters from the
  asymptotic normal distribution of their estimates.  Used for
  representing uncertainty in any function of the parameters.

* summary.flexsurvreg can be called with ci=FALSE to omit confidence
  intervals.

* "start" argument defaults to 0 for all prediction times in
  summary.flexsurvreg. 

* Bug fix in summary.flexsurvreg for left-truncated models, which was
  returning probabilities > 1 before the truncation time.

* New model.frame and model.matrix methods to extract the data from
  fitted flexsurvreg objects.

* Accept vector X in summary.flexsurvreg, and give informative error